--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - ./backend:/app
     command: sh -c "composer install
               \&& php artisan key:generate
-              \&& php artisan migrate:fresh
+              \&& php artisan migrate
               \&& php artisan passport:install
               \&& php artisan serve --host=0.0.0.0"
     networks:
